Projects/Project_1/style.css
@import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@400;700&family=Inika&display=swap');
@font-face {
  font-family: "painted brush";
  src: url("fonts/Painted_Brush.ttf");
}

/* **! ONE style sheet per project, */
/* **! REMEMBER to ALWAYS "commit to main AND push to github */

/* 
font-family: 'painted brush;
font-family: 'Inika', serif;
primary: #FFF200;
secondary: #1C1C23;
*/

* {
  box-sizing:border-box;
}
body {
  margin:0;
  font-family: 'Inika', serif;
  background-color: #ffffff;
}

body.knives{
background-color: #fff;
}

img {
  width:100%;
}

h1 {
  font-family: "painted brush";
  font-weight: 400;
  font-size: 120px;
  color: #FFF200;
}

.home-top nav h1 a{
  color: #FFF200;
}

h2 {
  font-family: "painted brush";
  font-weight: 400;
  font-size: 160pt;
  color: #FFF200;
}
/*change the font to brandon grotesque when you get it */
h3 {

font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
font-size:40px;
}

h4{
  margin:0;
  font-family: 'Inika', serif;
  word-spacing: 5%;
  color: #1C1C23;
}

a {
  color: #1C1C23;
  text-decoration:none;
}
footer {
  background-color: #FFF200;
  width:100vw;
}


/*----------------------------------------- Buttons / Navigation ----------------------------------------------*/

.button {
  display:inline-block;
  background-color: #FFF200;
  color: #1C1C23;
  padding: 12px 16px;
  border-radius: 2px;
}
.button:hover {
  background-color: #1C1C23;
  color: #FFF200;
}
.home-top {
  background-image: url('Images/HomeHero.jpg');
  background-size:cover;
  width:100vw;
  height:100vh;
}
.home-top nav a {
color: rgb(255, 255, 255);

}
.home-top nav h1 {
  margin:0;
}

/* this is the  main home navigation*/
.home-top nav {
  padding-top:60px;
  padding-bottom:60px;
  font-size: 18pt;
  border-bottom: 1px solid white;
}

.home-top nav ul {
  list-style:none;
  display:flex;
  justify-content: space-around;
  align-items: center;
  padding:0;
  margin:0;
}

.home-about {
  height:100vh;
  width:100vw;
  background-color: #1C1C23;
  color: white;
   width: 80%; margin: auto;
}


/*--------------------------knives learn more home page section----------------------------------------*/

#about-home-blurb{
  color:white;
 
 /* **TODO : DO NOT USE FLOATS, Find out how to change this */
  float:right;
  text-align: left;
  padding-bottom: 100%;
  margin: 70%;
}

.darkbackground-p{
  color: white;
  
}

/*-----------------------------Knife types home block-------------------------------------------*/

.knife-types-home {
  text-align: below center;
  border-top: 1px solid white;
  border-bottom: 1px solid white;
  color: #fff;
  background-color: #1C1C23;
  align; center
  margin: 10em;
}

h2 {
  font-size: 130px;
  
}

.photo-container {
  display: flex;
  justify-content: center;
  gap: 10px;
}

.photo-container div{
flex:1
}

/*----------------------------------------Knife care Home block-------------------------------*/

.background-section {
  position: relative;
  height: 897px;
  background-image: url("images/Care_Hero.jpg");
  background-size: cover;
}

.overlay {
  position: absolute;
  top: 0;
  right: 0;
  width:35%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start; /* To align content to the right */
  padding: 20px;
  color: #fff;
}

h2 {
  text-align: center;
}

/*-----------------------------------------Knife types (about knives)------------------------------------------------*/

/**? How do I change my background and sizes of the text on this specific page?*/

/*.knives section {
  margin-bottom: 20px;
  background-color: #FFF200;
}*/

.knives-h2 {
  font-size: 40px;
  margin-bottom: 10px;
}

.knives-h3 {
  font-size: 20pt;
  margin-bottom: 5px;
}

/*can use this as needed*/
.img-pad{
  padding:60px;
}

.knife-types-about{
  background-color: #fff;
}

/* about page*/

.ourteam{
  background-color: #1C1C23;
}

/*-----------------------------------------Footer------------------------------------------------*/

footer {
  width: 100%;
  height: 267px;
  background-color: #FFF200;
  align-items: center;
  display: flex;
  justify-content: space-between;
  padding: 5em;
   
}

h1 {
  text-align: left;
  color: #1C1C23;
  padding-left: 40px;

}

.links {
  display: flex;
  justify-content: flex-end;
  align-items:center;
  padding: 60px;

}

h3 {
  margin-left: 10px;
  
}

p {
  text-align: left;
  padding-bottom: 2em;
}

.copyright{
  
}

/* Blog main body*/

.body-blogbody{
  background-color: #fff;
}


/*------------------------------------------- Flex's ---------------------------------------------*/

.flex {
  display:flex;
}
.flex div {
  flex:1;
}

.about-homebox{
  background-color: #1C1C23;
  float: center;
}

/*-----------------------------Scroll button feature------------------------*/

#scrollToTopButton {
  display: none;
  position: fixed;
  bottom: 20px;
  right: 20px;
  width: 40px;
  height: 40px;
  font-size: 24px;
  background-color: #FFF200;
  color: #070022;
  border: none;
  border-radius: 50%;
  cursor: pointer;
}

#scrollToTopButton:hover {
  background-color: #ffffff;
}


/* blog section*/

.

/* ** Check out this youtube video on how to create small svg animations:
- the max width should be 768 px
if you are using multi collumns use the .flexbox {flex-direction:column;}
https://www.youtube.com/watch?v=momDSSTf6LM */


/**/

